[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastmcp>=3.4.0",
    "fastapi>=0.110.0",
    "python-multipart>=0.0.9",
    "libsql-experimental>=0.0.16",
    "bcrypt>=4.0.0",
    "PyJWT>=2.8.0",
    "uvicorn>=0.29.0",
]
